; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ppp/extr_pppoe.c_cmp_2_addr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ppp/extr_pppoe.c_cmp_2_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pppoe_addr = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pppoe_addr*, %struct.pppoe_addr*)* @cmp_2_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_2_addr(%struct.pppoe_addr* %0, %struct.pppoe_addr* %1) #0 {
  %3 = alloca %struct.pppoe_addr*, align 8
  %4 = alloca %struct.pppoe_addr*, align 8
  store %struct.pppoe_addr* %0, %struct.pppoe_addr** %3, align 8
  store %struct.pppoe_addr* %1, %struct.pppoe_addr** %4, align 8
  %5 = load %struct.pppoe_addr*, %struct.pppoe_addr** %3, align 8
  %6 = getelementptr inbounds %struct.pppoe_addr, %struct.pppoe_addr* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.pppoe_addr*, %struct.pppoe_addr** %4, align 8
  %9 = getelementptr inbounds %struct.pppoe_addr, %struct.pppoe_addr* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %7, %10
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load %struct.pppoe_addr*, %struct.pppoe_addr** %3, align 8
  %14 = getelementptr inbounds %struct.pppoe_addr, %struct.pppoe_addr* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.pppoe_addr*, %struct.pppoe_addr** %4, align 8
  %17 = getelementptr inbounds %struct.pppoe_addr, %struct.pppoe_addr* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @ether_addr_equal(i32 %15, i32 %18)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %12, %2
  %22 = phi i1 [ false, %2 ], [ %20, %12 ]
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local i64 @ether_addr_equal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
